--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head></head>
     <body>
         <div>
-            <h1>hello world</h1>
+            <h1>hello world2</h1>
         </div>
     </body>
 </html>
